<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">简易音乐播放器</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="song_information">歌曲信息</string>
    <string name="song_list">歌曲显示</string>
    <string name="song_lyrics">歌词界面</string>
    <string name="song_name">请选择播放的歌曲</string>
    <string name="search_song">搜索音乐</string>
    <string name="search_hint">请输入关键词</string>
    <string name="search_button">搜索</string>
    <string name="tseting">测试数据</string>
    <string name="user_logging">用户登录</string>
    <string name="title_activity_user_main">登录界面</string>
    <string name="username_login">用户名:</string>
    <string name="password_login">密      码:</string>
    <string name="login">登  录</string>
    <string name="register">注  册</string>
    <string name="password_forgetting">忘记密码</string>
    <string name="hidden_username">请输入用户名</string>
    <string name="hidden_password">请输入密码</string>
    <string name="title_activity_register">注册界面</string>
    <string name="cellphone_number">手机号:</string>
    <string name="verify_password">确认密码:</string>
    <string name="gender">性别:</string>
    <string name="birthday">生日:</string>
    <string name="personal_information">个人信息:</string>
    <string name="bow_out">退出</string>
    <string name="hidden_cellphone_number">请输入手机号:</string>
    <string name="password_again">请再次输入密码:</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hidden_information">请输入个人信息</string>
    <string name="Decide_to_register">确认注册</string>
    <string name="title_activity_person_information">个人信息显示界面</string>
    <string name="alter_person_information">修改个人信息</string>
    <string name="secede_login">退出登录</string>
    <string name="title_activity_update_information">修改个人信息界面</string>
    <string name="sure_to_update">确认修改</string>
    <string name="recede">退出</string>
    <string name="title_activity_update_by_question">根据问题修改密码</string>
    <string name="question">问题:</string>
    <string name="answer">答案:</string>
    <string name="answer_hint">请输入问题答案</string>
    <string name="submit">提交</string>
    <string name="title_activity_update_by_cellphone">根据手机验证码修改密码</string>
    <string name="verify_number">验证码:</string>
    <string name="verify_number_hint">请输入验证码</string>
    <string name="message_sending">发送短信</string>
    <string name="verification">确认</string>
    <string name="remembering_password">自动登录</string>
    <string name="initial">A</string>
    <string name="latest_play">最近播放</string>
    <string name="by_artist">按歌手显示</string>
    <string name="by_song">按歌曲显示</string>
    <string name="treasure">收藏列表</string>
    <string name="return_again">返回</string>
    <string name="input_keyword">请输入关键词</string>
    <string name="title_activity_search">搜索界面</string>
    <string name="title_activity_remark">评论界面</string>
    <string name="send">发表</string>
    <string name="hint_remark">请发表评论</string>

</resources>