<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UpdateByQuestionActivity" >

    <TableLayout
        android:id="@+id/update_password_by_question"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question"/>
            
            <TextView
                android:id="@+id/question_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            
        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer"/>
            
            <EditText
                android:id="@+id/answer_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/answer_hint"/>
            
        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <Button
                android:id="@+id/submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"/>
          
        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/password_updated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_login"/>
            
            <EditText
                android:id="@+id/password_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hidden_password"
                android:inputType="textPassword"/>
            
        </TableRow>
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            
            <TextView
                android:id="@+id/password_updated_again"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_forgetting"/>
            
            <EditText
                android:id="@+id/password_value_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_again"
                android:inputType="textPassword"/>
            
        </TableRow>
        
    </TableLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center">
        
        <Button
            android:id="@+id/sure_to_update"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/sure_to_update"/>
        
        <Button
            android:id="@+id/recede_after_updating"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/recede"/>
        
    </LinearLayout>

</RelativeLayout>