<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UpdateInformationActivity" >

    <TableLayout
        android:id="@+id/update_register_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:id="@+id/update_register_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.example.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/update_user_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_launcher"
                app:border_color="#ccc"
                app:border_width="2dp" />
            
        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">
            
            <TextView
                android:id="@+id/update_register_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_login"/>
            
            <EditText
                android:id="@+id/update_register_username_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hidden_username"/>
            
        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">
            
            <TextView
                android:id="@+id/update_register_cellphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cellphone_number"/>
            
            <EditText
                android:id="@+id/update_register_cellphone_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hidden_cellphone_number"/>
            
        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">
            
            <TextView
                android:id="@+id/update_register_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"/>
            
            <RadioGroup
                android:id="@+id/update_gender_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <RadioButton
                    android:id="@+id/update_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>
                
                <RadioButton
                    android:id="@+id/update_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_marginLeft="3dp"/>
                
            </RadioGroup>
            
        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/update_register_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <Spinner
                    android:id="@+id/update_birthday_year"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:tag="@string/year"/>
            
               <Spinner
                    android:id="@+id/update_birthday_month"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:tag="@string/month"/>

               <Spinner
                    android:id="@+id/update_birthday_day"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:tag="@string/day" />
                
            </LinearLayout>
            
        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp">
            
            <TextView
                android:id="@+id/update_register_personal_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/personal_information"/>
            
            <EditText
                android:id="@+id/update_personal_information_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:maxLines="5"
                android:gravity="top"
                android:hint="@string/hidden_information"/>
            
        </TableRow>
       
    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="horizontal">
            
        <Button
            android:id="@+id/update_login"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/sure_to_update"/>
        
        <Button
            android:id="@+id/update_recede"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/recede"/>
            
    </LinearLayout>

</RelativeLayout>