<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity" >

    <TableLayout
        android:id="@+id/register_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TableRow
            android:id="@+id/register_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.example.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/user_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_launcher"
                app:border_color="#ccc"
                app:border_width="2dp" />
        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">
            
            <TextView
                android:id="@+id/register_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username_login"/>
            
            <EditText
                android:id="@+id/register_username_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hidden_username"/>
            
        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">
            
            <TextView
                android:id="@+id/register_cellphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cellphone_number"/>
            
            <EditText
                android:id="@+id/register_cellphone_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hidden_cellphone_number"/>
            
        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">
            
            <TextView
                android:id="@+id/register_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_login"/>
            
            <EditText
                android:id="@+id/register_password_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hidden_password"
                android:inputType="textPassword"/>
            
        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">
            
            <TextView
                android:id="@+id/register_verify_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify_password"/>
            
            <EditText
                android:id="@+id/register_verify_password_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_again"
                android:inputType="textPassword"/>
            
        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">
            
            <TextView
                android:id="@+id/register_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"/>
            
            <RadioGroup
                android:id="@+id/register_gender_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <RadioButton
                    android:id="@+id/register_gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male"/>
                
                <RadioButton
                    android:id="@+id/register_gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_marginLeft="3dp"/>
                
            </RadioGroup>
            
        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:orientation="horizontal">
            
            <TextView
                android:id="@+id/register_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthday"/>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <Spinner
                    android:id="@+id/register_birthday_year"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:tag="@string/year"/>
            
               <Spinner
                    android:id="@+id/register_birthday_month"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:tag="@string/month"/>

               <Spinner
                    android:id="@+id/register_birthday_day"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:tag="@string/day" />
                
            </LinearLayout>

        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">
            
            <TextView
                android:id="@+id/register_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question"/>
            
            <Spinner
               android:id="@+id/register_question_value"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:entries="@array/questions"/>
            
        </TableRow>
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center">
            
            <TextView
                android:id="@+id/register_personal_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:text="@string/personal_information"/>
            
            <EditText
                android:id="@+id/register_personal_information_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:maxLines="5"
                android:gravity="top"
                android:hint="@string/hidden_information"/>
            
        </TableRow>
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:orientation="horizontal"
            android:gravity="center">
          
            <Button
                android:id="@+id/register_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Decide_to_register"/>
           
        </LinearLayout>
        
    </TableLayout>
    
</RelativeLayout>